tooltip functionality added, switch genres without overlapping fixed

--- a/style.css
+++ b/style.css
@@ -40,9 +40,11 @@ nav button{
   line-height: 1;
   font-weight: bold;
   padding: 12px;
-  background-color: rgba(255, 255, 255, 0.8);
+  fill: rgba(255, 255, 255, 0.8);
   color: black;
   border-radius: 2px;
+  width:100px;
+  height: 100px
 }
 
 .artist-pointer::after{
@@ -55,4 +57,34 @@ nav button{
   content: "\25BC";
   position: absolute;
   text-align: center;
+}
+
+
+.d3-tip {
+      line-height: 1;
+      padding: 6px;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      border-radius: 4px;
+      font-size: 12px;
+    }
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips specifically */
+.d3-tip.n:after {
+  margin: -2px 0 0 0;
+  top: 100%;
+  left: 0;
 }
